<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/walafondo"
    tools:context="com.project.m13.m13project.Selected">
    <LinearLayout
        android:background="@drawable/fondo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TSNombreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreLibro" />

        <TextView
            android:id="@+id/TSnombr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TSDescrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripción" />

        <TextView
            android:id="@+id/TSDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TSPrecioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio" />

        <TextView
            android:id="@+id/TSPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TSPropietarioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Propietario" />

        <TextView
            android:id="@+id/TSPropi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <ImageView
        android:id="@+id/setPicture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/buttonImage"
        android:layout_margin="10dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/TSAceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/boton"
            android:onClick="Contactar"
            android:text="@string/contactar"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>

</LinearLayout>
